memeenvy/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meme-api-ingress
  namespace: memeenvy
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "64k"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    cert-manager.io/cluster-issuer: "lets-encrypt"
spec:
  ingressClassName: nginx
  rules:
    - host: api.memeenvy.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apiserver-service
                port:
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meme-socket-ingress
  namespace: memeenvy
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/connection-proxy-header: "keep-alive"
    nginx.ingress.kubernetes.io/server-snippets: |
      proxy_set_header Upgrade $http_upgrade;
      proxy_set_header Connection "Upgrade";
      proxy_http_version 1.1;
      proxy_set_header X-Forwarded-Host $http_host;
      proxy_set_header X-Forwarded-Proto $scheme;
      proxy_set_header X-Forwarded-For $remote_addr;
      proxy_set_header Host $host;
      proxy_cache_bypass $http_upgrade;
spec:
  ingressClassName: nginx
  rules:
    - host: socket.memeenvy.com
      http:
        paths:
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: apiserver-service
                port:
                  number: 3001
